--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "echarts": "^5.3.0",
+    "echarts-wordcloud": "^2.0.0",
     "element-ui": "^2.15.6",
     "vue": "^2.6.11"
   },
