--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "d3": "^6.7.0",
+    "d3-render": "^0.3.0",
     "echarts": "^5.3.0",
     "echarts-wordcloud": "^2.0.0",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
