--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts-wordcloud": "^2.0.0",
     "element-ui": "^2.15.6",
     "vue": "^2.6.11",
+    "vue-number-scroll": "^2.0.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
